# CMakeDemos

./: readme.md
MutipleDirectories/: CMakeLists.txt  main.c
MutipleDirectories/Circle/: CMakeLists.txt  circle.c  circle.h
MutipleDirectories/Point/: point.h
MutipleDirectories/Rect/: CMakeLists.txt  rect.c  rect.h
MutipleFiles/: CMakeLists.txt
NestDirectories/: CMakeLists.txt
NestDirectories/Shape/: CMakeLists.txt
QtDemo/: CMakeLists.txt  main.cpp
SingleFile/: CMakeLists.txt  main.c
SingleFilePlus/: CMakeLists.txt  config.txt  main.c
SingleFilePlus/vscodecfg/: launch.json  tasks.json
SubDirectory/: CMakeLists.txt
SubDirectoryLib/: CMakeLists.txt  main.c
SubDirectoryLib/Point/: point.c
VSCodeConfig/: launch.json  tasks.json
